--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -57,7 +57,7 @@
  FSM_status_quo_desc:1 "Change attracts instability. Why crumble under the wave of modern discourse, when we already have all we need?"
  FSM_revoke_sanction:1 "Revoke The Sanctions"
  FSM_revoke_sanction_desc:1 "The Versailles Treaty imposed a number of unfair sanctions on us. While our workers toil away, the French and British reap our profit. No Freistaater should bear to live like this; the time has come to stand up for ourselves and deny the imperialist powers their oppressive demands."
- FSM_reinstate_the_associate_state:1 "Restore the Associate State"
+ FSM_reinstate_the_associate_state:1 "Restore the Associate State Status"
  FSM_reinstate_the_associate_state_desc:1 "The Associate State represented a golden era for the german people. Our economy prospered under the Kaiserreich, and offered us mutual military support. But it is not too late to reinstate the Associate State, and once again reunite with our european brethren."
  FSM_encourage_fascists:1 "Encourage Fascism"
  FSM_encourage_fascists_desc:1 "Fascism seems to have brought Germany strength and unity; perhaps it will work for us too. Many officials in the government have sympathies to Hitler's regime; we should hear them out."
