--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -27,14 +27,16 @@
  FSM_more_research_desc:1 "With our economy now safer, we can begin to give funds to our scientific endeavors"
  FSM_unite_germans:0 "Unite the Mu-Deutsche"
  FSM_unite_germans_desc:0 "History has proven that national unity based on cultural similarities like language and religion is the only way to survive in this world. We must bring together all of the Mu-Deutsche under one banner."
- FSM_schoenesland_1:0 "Invite Manu"
- FSM_schoenesland_1_desc: "We have had our previousd disagreements with Manu before, but our common history and our common struggles declare that we should be one!"
- FSM_schoenesland_2:0 "Invite Schoenesland"
- FSM_schoenesland_2_desc: "Our German brethren in Schoenesland should welcome the opportunity to be part of the growing Mu-Deutsche Bloc."
+ FSM_schoenesland_1:0 "Invite Schoenesland"
+ FSM_schoenesland_1_desc: "When we first arrived on this rich continent, the German people had spread far and wide. The island nation of Schoenesland is one of those settlements. It is reasonable that they would see our goal as clearly as we do."
+ FSM_schoenesland_2:0 "The Schoenesland Question"
+ FSM_schoenesland_2_desc: "Though far removed from us geographically, Schoenesland is another bastion of German heritage. A century ago, we helped them secure their freedom. Today, we shall lead them to their glory again"
  FSM_vogelinsel_1:0 "Invite Vogelinsel"
- FSM_vogelinsel_1_desc:0 "In the past Vogelinsel did not wish to be united with us under one banner. Now that the cowardly Allies have shown clearly through the Treaty of Versailles that they cannot be trusted to treat any German with dignity perhaps Vogelinsel will join us now."
- FSM_vogelinsel_2:0 "The Nybornholm Question"
- FSM_vogelinsel_2_desc:0 "We have long had much in common with our Nybornholmer Danish brethren. In fact, we feel that we have more in common with them than they possibly could with Denmark! We eat the same foods, we drink the same liquors, and we sleep under the same stars. Even the Danish they speak is now mostly German! They should become one with us and our glory!"
+ FSM_vogelinsel_1_desc:0 "A humble nation of South Mu, Vogelinsel had once voted to stay out of the Freistaaten. Nonetheless, they remain a close neighbour, and see plenty of influence from the FSM. Perhaps they would be willing to step up our cooperation?"
+ FSM_vogelinsel_1:0 "Ultimatum to Vogelinsel"
+ FSM_vogelinsel_1_desc:0 "The nation of Vogelinsel is meager and vulnerable. Their independence had given them relative peace, but as war draws near, their chances of surviving dwindle. Joining the Freistaaten is their only path to glory."
+ FSM_nybornholm_question:0 "The Nybornholm Question"
+ FSM_nybornholm_question_desc:0 "We have long had much in common with our Nybornholmer Danish brethren. In fact, we feel that we have more in common with them than they possibly could with Denmark! We eat the same foods, we drink the same liquors, and we sleep under the same stars. Even the Danish they speak is now mostly German! They should become one with us and our glory!"
  FSM_challenge_austral_sea:0 "Austral Ocean Dominance"
  FSM_challenge_austral_sea_desc:0 "Many times in history nations have tried to claim bodies of water as their own. Most have not succeeded. But our dominance of the Austral Ocean is assured!"
  FSM_supress_manu_nationalism:1 "Oust Opposition in Manu"
@@ -126,7 +128,7 @@
  fsm.4.b:0 "Never shall Saxonia Austral stand under any flag but our own!"
 
  fsm.5.t:0 "Manu Accepts Integration"
- fsm.5.d:0 "It seems our recent ingerences have indeed cleared up the mess that was Manu's administration. A simple message came in today to the parlamient, a document of agreement to the integration, signed by the head of administration himself. We shall waste no time in honoring Manustaat as a righteous and full Staat under the Freistaaten union."
+ fsm.5.d:0 "It seems our recent interventions have indeed cleared up the mess that was Manu's administration. A simple message came in today to the parlamient, a document of agreement to the integration, signed by the head of administration himself. We shall waste no time in honoring Manustaat as a righteous and full Staat under the Freistaaten union."
  fsm.5.a:0 "A toast to the new compatriots!"
  
  fsm.6.t:0 "FSM Seeks Alliance"
@@ -140,5 +142,9 @@
 
  fsm.8.t:0 "[FSM.GetName] Proposes Alliance"
  fsm.8.d:0 "It seems the call for a united Germany reached farther than expected, as fascist supports had recently overthrown the government in the FSM, and now pledge loyalty to [Root.GetLeader]. They propose an alliance that would mutually benefit us both. There are doubts about the nations strategic value: it's inconviently far from Europe, and not the most developed. Nonetheless, it is hard to deny the amount of recources and manpower they are willing to put down for us."
- fsm.8.a:0 "No german left behind!"
+ fsm.8.a:0 "No German left behind!"
  fsm.8.b:0 "They are cowards and a liability."
+ fsm.15.t:0 "FSM Requests New Guinea"
+ fsm.15.d:0 "An ambassador from the FSM arrived today with a demand from those Mu Germans. They want us to cede control of Papua and New Guinea to them, citing their previous colonial status under the German Empire. While this might seem unpleasant to contemplate, it would be better to give it to them than to the Nazis, right?"
+ fsm.15.a:0 "They are right. We shall cede it immediately."
+ fsm.15.b:0 "What cheeky little... No!"
