--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -86,7 +86,7 @@
  FSM_centralize:1 "Centralize"
  FSM_centralize_desc:1 "As it stands now, our nation is divided; too many regulations differ between the states, and agreement is inconsistent. A strong nation needs a centralized government and an clear vision for the future. We must reform the government, and make sure everyone gets an equal treatment under the Freistaaten law, from every Ottostaater to Wüstenlander."
  FSM_american_union:1 "A More American Union"
- FSM_american_union_desc:1 "The union system of the FSM is vague and unclear. While at its core, the Staats are established as distinct administrative entities, they in practice rarely find the power to make their own laws. The USA is wildly successful, in part because they had given all of their states equal speak in the nations future, and plenty of self-determination. We must model our system on this to improve."
+ FSM_american_union_desc:1 "The union system of the FSM is vague and unclear. While at its core, the Staats are established as distinct administrative entities, they in practice rarely find the power to make their own laws. The USA is wildly successful, in part because they had given all of their states equal voice in the nation's future, and plenty of self-determination. We must model our system on this to improve."
  FSM_recognize_dutch:1 "Recognize Dutch"
  FSM_recognize_dutch_desc:1 "While the FSM has always been German at its core, it’s important we don’t forget our roots under the crown of the Netherlands. Many Freistaater have Dutch roots, and still speak the language at home. We should fully embrace our identity and recognize Dutch as a second official language."
  FSM_admit_gdea:1 "Admit The GdEA Into Parliament"
@@ -144,6 +144,37 @@
  fsm.8.d:0 "It seems the call for a united Germany reached farther than expected, as fascist supports had recently overthrown the government in the FSM, and now pledge loyalty to [Root.GetLeader]. They propose an alliance that would mutually benefit us both. There are doubts about the nations strategic value: it's inconviently far from Europe, and not the most developed. Nonetheless, it is hard to deny the amount of recources and manpower they are willing to put down for us."
  fsm.8.a:0 "No German left behind!"
  fsm.8.b:0 "They are cowards and a liability."
+
+ fsm.9.t:0 "FSM EVENT 9"
+ fsm.9.d:0 "Event Description"
+ fsm.9.a:0 "Option A"
+ fsm.9.b:0 "Option B"
+
+ fsm.10.t:0 "FSM EVENT 10"
+ fsm.10.d:0 "Event Description"
+ fsm.10.a:0 "Option A"
+ fsm.10.b:0 "Option B"
+
+ fsm.11.t:0 "FSM EVENT 11"
+ fsm.11.d:0 "Event Description"
+ fsm.11.a:0 "Option A"
+ fsm.11.b:0 "Option B"
+
+ fsm.12.t:0 "FSM EVENT 12"
+ fsm.12.d:0 "Event Description"
+ fsm.12.a:0 "Option A"
+ fsm.12.b:0 "Option B"
+
+ fsm.13.t:0 "FSM EVENT 13"
+ fsm.13.d:0 "Event Description"
+ fsm.13.a:0 "Option A"
+ fsm.13.b:0 "Option B"
+
+ fsm.14.t:0 "FSM EVENT 14"
+ fsm.14.d:0 "Event Description"
+ fsm.14.a:0 "Option A"
+ fsm.14.b:0 "Option B"
+ 
  fsm.15.t:0 "FSM Requests New Guinea"
  fsm.15.d:0 "An ambassador from the FSM arrived today with a demand from those Mu Germans. They want us to cede control of Papua and New Guinea to them, citing their previous colonial status under the German Empire. While this might seem unpleasant to contemplate, it would be better to give it to them than to the Nazis, right?"
  fsm.15.a:0 "They are right. We shall cede it immediately."
