--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -46,7 +46,7 @@
  FSM_kohn_gambit:1 "Kohn Gambit"
  FSM_kohn_gambit_desc:1 "Thomas Kohn is a steadfast owner of the Kohn Produktionsfirma, the biggest individual exporter of goods in the nation. His investments in the GSMC helped sustain it, and even today he remains a staunch supporter of it. Perhaps, handing the company’s control over to a single more experienced entrepreneur like him will help revitalize it, and tie its exports directly with it."
  FSM_germans_over_all:1 "Germans Over All"
- FSM_germans_over_all_desc:1 "The Germanic race has no other it compares to. Surviving hardships far and wide, and fighting our way into glorious independence on this foreign and wild continent, we have proven ourselves superior. The lesser must understand to never challenge us."
+ FSM_germans_over_all_desc:1 "The Germanic race has no equal! Surviving hardships far and wide, and fighting our way into glorious independence on this foreign and wild continent, we have proven ourselves superior. The lesser must understand to never challenge us."
  FSM_open_stocks:1 "Open Stocks"
  FSM_open_stocks_desc:1 "The GSMC's recession has can be largely attributed to our failures to keep up with the times. We can help revitalize the company by better spreading out leadership, and encouraging more investment in its stocks. Although the company would become heavily decentralized, it would promote investment, as well as gain us more stability should some investors choose to retract like they have before."
  FSM_annex_manu:1 "Integrate Manu"
@@ -57,8 +57,8 @@
  FSM_status_quo_desc:1 "Change attracts instability. Why crumble under the wave of modern discourse, when we already have all we need?"
  FSM_revoke_sanction:1 "Revoke The Sanctions"
  FSM_revoke_sanction_desc:1 "The Versailles Treaty imposed a number of unfair sanctions on us. While our workers toil away, the French and British reap our profit. No Freistaater should bear to live like this; the time has come to stand up for ourselves and deny the imperialist powers their oppressive demands."
- FSM_reinstate_the_associate_state:1 "Restore the Associate State Status"
- FSM_reinstate_the_associate_state_desc:1 "The Associate State represented a golden era for the german people. Our economy prospered under the Kaiserreich, and offered us mutual military support. But it is not too late to reinstate the Associate State, and once again reunite with our european brethren."
+ FSM_reinstate_the_associate_state:1 "Restore the Associated State Status"
+ FSM_reinstate_the_associate_state_desc:1 "The Associated State Status represented a golden era for our German people. Our economy prospered under the Kaiserreich, and offered us mutual military support. But it is not too late to reinstate the Associate State, and once again reunite with our european brethren."
  FSM_encourage_fascists:1 "Encourage Fascism"
  FSM_encourage_fascists_desc:1 "Fascism seems to have brought Germany strength and unity; perhaps it will work for us too. Many officials in the government have sympathies to Hitler's regime; we should hear them out."
  FSM_snap_elections:1 "Snap Elections"
@@ -119,7 +119,7 @@
  fsm.2.d:0 "Despite the increased political resistance this term, the Selbstverwaltung Partei has emerged victorious once again. Dominating the nations politics since independence in 1919, the party upholds self-rule for the FSM, and favours an economy built on large, German-owned companies within the country. Although it has become a pillar of stability for the people, there are worries among the government that many members of the party have become unscrupulous in their rule, and foster authoritarian sympathies."
  fsm.2.a:0 "To another properous term!"
  fsm.3.t:0 "DMS-GdEA Merger Announced"
- fsm.3.d:0 "A mere days after becoming an officially functional party, the Gewerkschaft der Einheimischen Arbeiter, under the leadership of Sumukivi Aepa’ato, has announced it would be forming a coalition with the germanocentric Deutschemu Sozialisten. Although a predictable move, this change still caused quite an upheaval in the upper echelons of FSM's parlamient. The combined popularity of the two parties represents a communist bloc finally big enough to challenge the Selbstervaltung and LK parties."
+ fsm.3.d:0 "A mere days after becoming an officially functional party, the Gewerkschaft der Einheimischen Arbeiter, under the leadership of Sumukivi Aepa’ato, has announced it would be forming a coalition with the Germanocentric Deutschesmu Sozialisten. Although a predictable move, this change still caused quite an upheaval in the upper echelons of FSM's parlamient. The combined popularity of the two parties represents a communist bloc finally big enough to challenge the Selbstervaltung and LK parties."
  fsm.3.a:0 "Strength comes in numbers and cooperation."
 
  fsm.4.t:0 "FSM Requests Immediate Execution of Integration"
@@ -132,7 +132,7 @@
  fsm.5.a:0 "A toast to the new compatriots!"
  
  fsm.6.t:0 "FSM Seeks Alliance"
- fsm.6.d:0 "News of return of the Kaiser we're met with widespread celebration in the souther Mu nation of the FSM. A German-born colony, they were quick to unite with the crown of a united Germany. They enjoyed a prosperous relationship with us under the Associate State, but were sadly put under British rule after the Great War. Today, with Germany free of its fascist regime, and the FSM under its own libery, they seek to ally with us once more."
+ fsm.6.d:0 "News of return of the Kaiser has been met with widespread celebration in the southern Mu nation of the FSM. A German-born colony, they were quick to unite with the crown of a united Germany. They enjoyed a prosperous relationship with us under the Associated State Status, but were sadly put under British rule after the Great War. Today, with Germany free of its fascist regime, and the FSM free to choose their own path, they seek to ally with us once more."
  fsm.6.a:0 "We welcome them with open hands."
  fsm.6.b:0 "We don't need another burden on our back."
 
