--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -86,7 +86,7 @@
  FSM_centralize:1 "Centralize"
  FSM_centralize_desc:1 "As it stands now, our nation is divided; too many regulations differ between the states, and agreement is inconsistent. A strong nation needs a centralized government and an clear vision for the future. We must reform the government, and make sure everyone gets an equal treatment under the Freistaaten law, from every Ottostaater to Wüstenlander."
  FSM_american_union:1 "A More American Union"
- FSM_american_union_desc:1 "The union system of the FSM is vague and unclear. While at its core, the Staats are established as distinct administrative entities, they in practice rarely find the power to make their own laws. The USA is wildly successful, in part because they had given all of their states equal speak in the nations future, and plenty of self-determination. We must model our system on this to improve."
+ FSM_american_union_desc:1 "The union system of the FSM is vague and unclear. While at its core, the Staats are established as distinct administrative entities, they in practice rarely find the power to make their own laws. The USA is wildly successful, in part because they had given all of their states equal voice in the nation's future, and plenty of self-determination. We must model our system on this to improve."
  FSM_recognize_dutch:1 "Recognize Dutch"
  FSM_recognize_dutch_desc:1 "While the FSM has always been German at its core, it’s important we don’t forget our roots under the crown of the Netherlands. Many Freistaater have Dutch roots, and still speak the language at home. We should fully embrace our identity and recognize Dutch as a second official language."
  FSM_admit_gdea:1 "Admit The GdEA Into Parliament"
@@ -116,7 +116,7 @@
  fsm.1.d:0 "The 1936 election in the FSM have concluded with a suprising victory at the hands of the Liberale Koalition. A progressive group, the LK party has only gained traction within recent years, but it seems to have been enough to garner them a slim majority of the votes. The party is already promising to undertake major reforms of the nation, in hopes of revitalizing the economy, mending the nation's poor diplomatic relations, and creating a more democratic and egalitarian state."
  fsm.1.a:0 "To a new course for the Freistaaten!!"
  fsm.2.t:0 "Selbstverwaltung Partei Wins Elections"
- fsm.2.d:0 "Despite the increased political resistance this term, the Selbstverwaltung Partei has emerged victorious once again. Dominating the nations politics since independence in 1919, the party upholds self-rule for the FSM, and favours an economy built on large, German-owned companies within the country. Although it has become a pillar of stability for the people, there are worries among the government that many members of the party have become unscrupulous in their rule, and foster authoritarian sympathies."
+ fsm.2.d:0 "Despite the increased political resistance this term, the Selbstverwaltung Partei has emerged victorious once again. Dominating the nation's politics since independence in 1919, the party upholds self-rule for the FSM, and favours an economy built on large, German-owned companies within the country. Although it has become a pillar of stability for the people, there are worries among the government that many members of the party have become unscrupulous in their rule, and foster authoritarian sympathies."
  fsm.2.a:0 "To another properous term!"
  fsm.3.t:0 "DMS-GdEA Merger Announced"
  fsm.3.d:0 "A mere days after becoming an officially functional party, the Gewerkschaft der Einheimischen Arbeiter, under the leadership of Sumukivi Aepa’ato, has announced it would be forming a coalition with the Germanocentric Deutschesmu Sozialisten. Although a predictable move, this change still caused quite an upheaval in the upper echelons of FSM's parlamient. The combined popularity of the two parties represents a communist bloc finally big enough to challenge the Selbstervaltung and LK parties."
@@ -141,7 +141,7 @@
  fsm.7.a:0 "Die Deutschen Über Alles!"
 
  fsm.8.t:0 "[FSM.GetName] Proposes Alliance"
- fsm.8.d:0 "It seems the call for a united Germany reached farther than expected, as fascist supports had recently overthrown the government in the FSM, and now pledge loyalty to [Root.GetLeader]. They propose an alliance that would mutually benefit us both. There are doubts about the nations strategic value: it's inconviently far from Europe, and not the most developed. Nonetheless, it is hard to deny the amount of recources and manpower they are willing to put down for us."
+ fsm.8.d:0 "It seems the call for a united Germany reached farther than expected, as fascist supports had recently overthrown the government in the FSM, and now pledge loyalty to [Root.GetLeader]. They propose an alliance that would mutually benefit us both. There are doubts about the nation's strategic value: it's inconviently far from Europe, and not the most developed. Nonetheless, it is hard to deny the amount of recources and manpower they are willing to put down for us."
  fsm.8.a:0 "No German left behind!"
  fsm.8.b:0 "They are cowards and a liability."
  fsm.15.t:0 "FSM Requests New Guinea"
