Revert "Merge branch 'master' of https://github.com/Thursasprengir/AtlantisMuLemuria"
This reverts commit a5b8fb53f0a2c9f8d59ac3a8271444e9f8200b01, reversing
changes made to 7cc9a70e0fa938886c2c8d40cd9a13b125f50c95.

--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -46,7 +46,7 @@
  FSM_kohn_gambit:1 "Kohn Gambit"
  FSM_kohn_gambit_desc:1 "Thomas Kohn is a steadfast owner of the Kohn Produktionsfirma, the biggest individual exporter of goods in the nation. His investments in the GSMC helped sustain it, and even today he remains a staunch supporter of it. Perhaps, handing the company’s control over to a single more experienced entrepreneur like him will help revitalize it, and tie its exports directly with it."
  FSM_germans_over_all:1 "Germans Over All"
- FSM_germans_over_all_desc:1 "The Germanic race has no equal! Surviving hardships far and wide, and fighting our way into glorious independence on this foreign and wild continent, we have proven ourselves superior. The lesser must understand to never challenge us."
+ FSM_germans_over_all_desc:1 "The Germanic race has no other it compares to. Surviving hardships far and wide, and fighting our way into glorious independence on this foreign and wild continent, we have proven ourselves superior. The lesser must understand to never challenge us."
  FSM_open_stocks:1 "Open Stocks"
  FSM_open_stocks_desc:1 "The GSMC's recession has can be largely attributed to our failures to keep up with the times. We can help revitalize the company by better spreading out leadership, and encouraging more investment in its stocks. Although the company would become heavily decentralized, it would promote investment, as well as gain us more stability should some investors choose to retract like they have before."
  FSM_annex_manu:1 "Integrate Manu"
@@ -57,8 +57,8 @@
  FSM_status_quo_desc:1 "Change attracts instability. Why crumble under the wave of modern discourse, when we already have all we need?"
  FSM_revoke_sanction:1 "Revoke The Sanctions"
  FSM_revoke_sanction_desc:1 "The Versailles Treaty imposed a number of unfair sanctions on us. While our workers toil away, the French and British reap our profit. No Freistaater should bear to live like this; the time has come to stand up for ourselves and deny the imperialist powers their oppressive demands."
- FSM_reinstate_the_associate_state:1 "Restore the Associated State Status"
- FSM_reinstate_the_associate_state_desc:1 "The Associated State Status represented a golden era for our German people. Our economy prospered under the Kaiserreich, and offered us mutual military support. But it is not too late to reinstate the Associate State, and once again reunite with our european brethren."
+ FSM_reinstate_the_associate_state:1 "Restore the Associate State Status"
+ FSM_reinstate_the_associate_state_desc:1 "The Associate State represented a golden era for the german people. Our economy prospered under the Kaiserreich, and offered us mutual military support. But it is not too late to reinstate the Associate State, and once again reunite with our european brethren."
  FSM_encourage_fascists:1 "Encourage Fascism"
  FSM_encourage_fascists_desc:1 "Fascism seems to have brought Germany strength and unity; perhaps it will work for us too. Many officials in the government have sympathies to Hitler's regime; we should hear them out."
  FSM_snap_elections:1 "Snap Elections"
@@ -86,7 +86,7 @@
  FSM_centralize:1 "Centralize"
  FSM_centralize_desc:1 "As it stands now, our nation is divided; too many regulations differ between the states, and agreement is inconsistent. A strong nation needs a centralized government and an clear vision for the future. We must reform the government, and make sure everyone gets an equal treatment under the Freistaaten law, from every Ottostaater to Wüstenlander."
  FSM_american_union:1 "A More American Union"
- FSM_american_union_desc:1 "The union system of the FSM is vague and unclear. While at its core, the Staats are established as distinct administrative entities, they in practice rarely find the power to make their own laws. The USA is wildly successful, in part because they had given all of their states equal voice in the nation's future, and plenty of self-determination. We must model our system on this to improve."
+ FSM_american_union_desc:1 "The union system of the FSM is vague and unclear. While at its core, the Staats are established as distinct administrative entities, they in practice rarely find the power to make their own laws. The USA is wildly successful, in part because they had given all of their states equal speak in the nations future, and plenty of self-determination. We must model our system on this to improve."
  FSM_recognize_dutch:1 "Recognize Dutch"
  FSM_recognize_dutch_desc:1 "While the FSM has always been German at its core, it’s important we don’t forget our roots under the crown of the Netherlands. Many Freistaater have Dutch roots, and still speak the language at home. We should fully embrace our identity and recognize Dutch as a second official language."
  FSM_admit_gdea:1 "Admit The GdEA Into Parliament"
@@ -116,10 +116,10 @@
  fsm.1.d:0 "The 1936 election in the FSM have concluded with a suprising victory at the hands of the Liberale Koalition. A progressive group, the LK party has only gained traction within recent years, but it seems to have been enough to garner them a slim majority of the votes. The party is already promising to undertake major reforms of the nation, in hopes of revitalizing the economy, mending the nation's poor diplomatic relations, and creating a more democratic and egalitarian state."
  fsm.1.a:0 "To a new course for the Freistaaten!!"
  fsm.2.t:0 "Selbstverwaltung Partei Wins Elections"
- fsm.2.d:0 "Despite the increased political resistance this term, the Selbstverwaltung Partei has emerged victorious once again. Dominating the nation's politics since independence in 1919, the party upholds self-rule for the FSM, and favours an economy built on large, German-owned companies within the country. Although it has become a pillar of stability for the people, there are worries among the government that many members of the party have become unscrupulous in their rule, and foster authoritarian sympathies."
+ fsm.2.d:0 "Despite the increased political resistance this term, the Selbstverwaltung Partei has emerged victorious once again. Dominating the nations politics since independence in 1919, the party upholds self-rule for the FSM, and favours an economy built on large, German-owned companies within the country. Although it has become a pillar of stability for the people, there are worries among the government that many members of the party have become unscrupulous in their rule, and foster authoritarian sympathies."
  fsm.2.a:0 "To another properous term!"
  fsm.3.t:0 "DMS-GdEA Merger Announced"
- fsm.3.d:0 "A mere days after becoming an officially functional party, the Gewerkschaft der Einheimischen Arbeiter, under the leadership of Sumukivi Aepa’ato, has announced it would be forming a coalition with the Germanocentric Deutschesmu Sozialisten. Although a predictable move, this change still caused quite an upheaval in the upper echelons of FSM's parlamient. The combined popularity of the two parties represents a communist bloc finally big enough to challenge the Selbstervaltung and LK parties."
+ fsm.3.d:0 "A mere days after becoming an officially functional party, the Gewerkschaft der Einheimischen Arbeiter, under the leadership of Sumukivi Aepa’ato, has announced it would be forming a coalition with the germanocentric Deutschemu Sozialisten. Although a predictable move, this change still caused quite an upheaval in the upper echelons of FSM's parlamient. The combined popularity of the two parties represents a communist bloc finally big enough to challenge the Selbstervaltung and LK parties."
  fsm.3.a:0 "Strength comes in numbers and cooperation."
 
  fsm.4.t:0 "FSM Requests Immediate Execution of Integration"
@@ -132,7 +132,7 @@
  fsm.5.a:0 "A toast to the new compatriots!"
  
  fsm.6.t:0 "FSM Seeks Alliance"
- fsm.6.d:0 "News of return of the Kaiser has been met with widespread celebration in the southern Mu nation of the FSM. A German-born colony, they were quick to unite with the crown of a united Germany. They enjoyed a prosperous relationship with us under the Associated State Status, but were sadly put under British rule after the Great War. Today, with Germany free of its fascist regime, and the FSM free to choose their own path, they seek to ally with us once more."
+ fsm.6.d:0 "News of return of the Kaiser we're met with widespread celebration in the souther Mu nation of the FSM. A German-born colony, they were quick to unite with the crown of a united Germany. They enjoyed a prosperous relationship with us under the Associate State, but were sadly put under British rule after the Great War. Today, with Germany free of its fascist regime, and the FSM under its own libery, they seek to ally with us once more."
  fsm.6.a:0 "We welcome them with open hands."
  fsm.6.b:0 "We don't need another burden on our back."
 
@@ -141,7 +141,7 @@
  fsm.7.a:0 "Die Deutschen Über Alles!"
 
  fsm.8.t:0 "[FSM.GetName] Proposes Alliance"
- fsm.8.d:0 "It seems the call for a united Germany reached farther than expected, as fascist supports had recently overthrown the government in the FSM, and now pledge loyalty to [Root.GetLeader]. They propose an alliance that would mutually benefit us both. There are doubts about the nation's strategic value: it's inconviently far from Europe, and not the most developed. Nonetheless, it is hard to deny the amount of recources and manpower they are willing to put down for us."
+ fsm.8.d:0 "It seems the call for a united Germany reached farther than expected, as fascist supports had recently overthrown the government in the FSM, and now pledge loyalty to [Root.GetLeader]. They propose an alliance that would mutually benefit us both. There are doubts about the nations strategic value: it's inconviently far from Europe, and not the most developed. Nonetheless, it is hard to deny the amount of recources and manpower they are willing to put down for us."
  fsm.8.a:0 "No German left behind!"
  fsm.8.b:0 "They are cowards and a liability."
  fsm.15.t:0 "FSM Requests New Guinea"
