--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -144,6 +144,37 @@
  fsm.8.d:0 "It seems the call for a united Germany reached farther than expected, as fascist supports had recently overthrown the government in the FSM, and now pledge loyalty to [Root.GetLeader]. They propose an alliance that would mutually benefit us both. There are doubts about the nation's strategic value: it's inconviently far from Europe, and not the most developed. Nonetheless, it is hard to deny the amount of recources and manpower they are willing to put down for us."
  fsm.8.a:0 "No German left behind!"
  fsm.8.b:0 "They are cowards and a liability."
+ 
+ fsm.9.t:0 "FSM EVENT 9"
+ fsm.9.d:0 "Event Description"
+ fsm.9.a:0 "Option A"
+ fsm.9.b:0 "Option B"
+
+ fsm.10.t:0 "FSM EVENT 10"
+ fsm.10.d:0 "Event Description"
+ fsm.10.a:0 "Option A"
+ fsm.10.b:0 "Option B"
+
+ fsm.11.t:0 "FSM EVENT 11"
+ fsm.11.d:0 "Event Description"
+ fsm.11.a:0 "Option A"
+ fsm.11.b:0 "Option B"
+
+ fsm.12.t:0 "FSM EVENT 12"
+ fsm.12.d:0 "Event Description"
+ fsm.12.a:0 "Option A"
+ fsm.12.b:0 "Option B"
+
+ fsm.13.t:0 "FSM EVENT 13"
+ fsm.13.d:0 "Event Description"
+ fsm.13.a:0 "Option A"
+ fsm.13.b:0 "Option B"
+
+ fsm.14.t:0 "FSM EVENT 14"
+ fsm.14.d:0 "Event Description"
+ fsm.14.a:0 "Option A"
+ fsm.14.b:0 "Option B"
+ 
  fsm.15.t:0 "FSM Requests New Guinea"
  fsm.15.d:0 "An ambassador from the FSM arrived today with a demand from those Mu Germans. They want us to cede control of Papua and New Guinea to them, citing their previous colonial status under the German Empire. While this might seem unpleasant to contemplate, it would be better to give it to them than to the Nazis, right?"
  fsm.15.a:0 "They are right. We shall cede it immediately."
