--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -70,7 +70,7 @@
  FSM_sieze_fjinland:1 "Seize Fjinland"
  FSM_sieze_fjinland_desc:1 "It has become increasingly clear the Dutch are incapable of administering their colonies. We would be doing them a favour by taking nearby Fjinland off their hands."
  FSM_ban_japanese_immigration:1 "Ban Japanese Immigration"
- FSM_ban_japanese_immigration_desc:1 "Why should any non-German, let alone one from Japan, "
+ FSM_ban_japanese_immigration_desc:1 "Why should any non-German, let alone one from Japan, come into our country and take jobs from hardworking Mu-Deutsche people? No, we shall not allow them to come and dilute our ideals."
  FSM_join_allies:1 "Join Allies"
  FSM_join_allies_desc:1 "Only a blind fool would stand on the wrong side of history! As the world is taken by storm with radical ideologies, the Allies represent a promise of democratic freedom and stability. Joining them would protect us, and help us fight for a more liberal world!"
  FSM_nationalize_plantations:1 "Nationalize Plantations"
