--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -105,7 +105,8 @@
  FSM_military_companies_desc:1 "We can no longer ignore the looming threat of global war. Just as all the other great powers have, we must shift our economy to producing military gear. Only well armed can we survive the oncoming storm, and make a name for ourselves in history."
  FSM_civilian_companies:1 "Civilian Companies"
  FSM_civilian_companies_desc:1 "Our economy has always enjoyed the greatest boons from exporting raw materials and food products. The war is far away from us, so while the great powers clash, our economy can prosper on civilian goods." 
-
+ FSM_military_buildup:1 "Military Buildup"
+ FSM_military_buildup_desc:1 "The safety and security of our nation and people lie in the hands of our loyal military. By adding substantially to their numbers we shall secure our borders." 
 
 
  FSM_nybornholm_question:0 "The Nybornholm Question"
