--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -45,7 +45,7 @@
  FSM_ripples_of_shanghai_desc:1 "7 years ago, sparked by the sinking of its crown vessel in the ports of Shanghai, the economic bubble of the German South Mu Company popped, with catastrophic consequences. Once a major holder of all trade in and out of Mu, the company is now a husk of its former shelf, and the economic influence it gave us is slipping out of our hands."
  FSM_kohn_gambit:1 "Kohn Gambit"
  FSM_kohn_gambit_desc:1 "Thomas Kohn is a steadfast owner of the Kohn Produktionsfirma, the biggest individual exporter of goods in the nation. His investments in the GSMC helped sustain it, and even today he remains a staunch supporter of it. Perhaps, handing the company’s control over to a single more experienced entrepreneur like him will help revitalize it, and tie its exports directly with it."
- FSM_germans_over_all:1 "Germans Over All"
+ FSM_germans_over_all:1 "Deutsche Über Alles"
  FSM_germans_over_all_desc:1 "The Germanic race has no other it compares to. Surviving hardships far and wide, and fighting our way into glorious independence on this foreign and wild continent, we have proven ourselves superior. The lesser must understand to never challenge us."
  FSM_open_stocks:1 "Open Stocks"
  FSM_open_stocks_desc:1 "The GSMC's recession has can be largely attributed to our failures to keep up with the times. We can help revitalize the company by better spreading out leadership, and encouraging more investment in its stocks. Although the company would become heavily decentralized, it would promote investment, as well as gain us more stability should some investors choose to retract like they have before."
@@ -98,7 +98,7 @@
  FSM_communist_hunt:1 "Hunt Down The Communists"
  FSM_communist_hunt_desc:1 "The claws of socialism have reached us too, and tug on our curtails like a demented monster. Deranged exiles from the homeland conspire with the rowdy and dangerous natives to bring the shadows of revolution to Mu. As long as they stand, we cannot rest easy. No home will go unchecked anymore."
  FSM_maywerken:1 "Maywerken"
- FSM_maywerken_desc:1 "The industry of the FSM is well oiled machine. The experiences of Europe has taught us that transportation and communication are key factors in the smoothness of production. The Maywerken will be a major undertaking: a nationwide board of over 30 companies from different industries, subsidized by the government, and convened with the purpose of simplifying deals, constructing new railways and roads, and overwatching the production of goods all the way from raw material to the port."
+ FSM_maywerken_desc:1 "The experiences of Europe have taught us that transportation and communication are key factors in production. The Maywerken will be a major undertaking: a nationwide board of over 30 companies from different industries, subsidized by the government, with the purpose of simplifying deals, constructing new railways and roads, and regulating the production of goods all the way from raw material to the port."
  FSM_allied_research_bonus:1 "Joint Research"
  FSM_allied_research_bonus_desc:1 "Our good relations with the nations of the commonwealth could perhaps give us access to some of the top minds of the scientific and engineering community."
  FSM_military_companies:1 "Military Companies"
@@ -107,6 +107,8 @@
  FSM_civilian_companies_desc:1 "Our economy has always enjoyed the greatest boons from exporting raw materials and food products. The war is far away from us, so while the great powers clash, our economy can prosper on civilian goods." 
  FSM_military_buildup:1 "Military Buildup"
  FSM_military_buildup_desc:1 "The safety and security of our nation and people lie in the hands of our loyal military. By adding substantially to their numbers we shall secure our borders." 
+ FSM_aggressive_strikes:1 "Bold Action"
+ FSM_aggressive_strikes_desc:1 "Our generals are planning 'bold action.' By this we can only assume they mean to militarily correct some of the border irregularities that have always plagued our nation." 
 
 
  FSM_nybornholm_question:0 "The Nybornholm Question"
@@ -180,3 +182,13 @@
  fsm.15.d:0 "An ambassador from the FSM arrived today with a demand from those Mu Germans. They want us to cede control of Papua and New Guinea to them, citing their previous colonial status under the German Empire. While this might seem unpleasant to contemplate, it would be better to give it to them than to the Nazis, right?"
  fsm.15.a:0 "They are right. We shall cede it immediately."
  fsm.15.b:0 "What cheeky little... No!"
+
+ fsm.20.t:0 "FSM EVENT 20"
+ fsm.20.d:0 "Event Description"
+ fsm.20.a:0 "Option A"
+ fsm.20.b:0 "Option B"
+
+ fsm.24.t:0 "FSM EVENT 24"
+ fsm.24.d:0 "Event Description"
+ fsm.24.a:0 "Option A"
+ fsm.24.b:0 "Option B"
