--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -57,8 +57,8 @@
  FSM_status_quo_desc:1 "Change attracts instability. Why crumble under the wave of modern discourse, when we already have all we need?"
  FSM_revoke_sanction:1 "Revoke The Sanctions"
  FSM_revoke_sanction_desc:1 "The Treaty of Versailles imposed a number of unfair sanctions on us. While our workers toil away, the French and British reap our profit. No Freistaater should bear to live like this; the time has come to stand up for ourselves and deny the imperialist powers their oppressive demands."
- FSM_reinstate_the_associate_state:1 "Restore the Associate State Status"
- FSM_reinstate_the_associate_state_desc:1 "The Associate State represented a golden era for the german people. Our economy prospered under the Kaiserreich, and offered us mutual military support. But it is not too late to reinstate the Associate State, and once again reunite with our european brethren."
+ FSM_reinstate_the_associate_state:1 "Restore the Associated State Status"
+ FSM_reinstate_the_associate_state_desc:1 "The Associated State represented a golden era for the german people. Our economy prospered under the Kaiserreich, and offered us mutual military support. But it is not too late to reinstate the Associate State, and once again reunite with our European brethren."
  FSM_encourage_fascists:1 "Encourage Fascism"
  FSM_encourage_fascists_desc:1 "Fascism seems to have brought Germany strength and unity; perhaps it will work for us too. Many officials in the government have sympathies to Hitler's regime; we should hear them out."
  FSM_snap_elections:1 "Snap Elections"
@@ -109,6 +109,18 @@
  FSM_military_buildup_desc:1 "The safety and security of our nation and people lie in the hands of our loyal military. By adding substantially to their numbers we shall secure our borders." 
  FSM_aggressive_strikes:1 "Bold Action"
  FSM_aggressive_strikes_desc:1 "Our generals are planning 'bold action.' By this we can only assume they mean to militarily correct some of the border irregularities that have always plagued our nation." 
+ FSM_liberalplaceholder1:1 "Stirrings of Industry"
+ FSM_liberalplaceholder1_desc:1 "Despite the social shock of the government passing the Landowners' Suffrage Amendment, our people have begun to warm to the idea. They have even begun to invest in factories, proving our government's prediction about the move right." 
+ FSM_liberalplaceholder3:1 "Minority Confidence"
+ FSM_liberalplaceholder3_desc:1 "Even now the Dutch speaking citizens who live primarily along our border with Fijnland have begun to invest in industry. How could we have ever doubted the wisdom of giving more people voting rights?" 
+ FSM_accept_german_scientists:1 "Accept German Scientists"
+ FSM_accept_german_scientists_desc:1 "Many brilliant minds from Germany are dismayed at the direction that Hitler has taken the country. We should offer them a safe, German home, with good schnitzel and even better beer." 
+ FSM_democratic_0:1 "Infrastructure Growth"
+ FSM_democratic_0_desc:1 "The Jaegerbergen divide the east from the west in FSM. We must ensure national unity by carving roads and railroads through the mountains to link our nation together." 
+ FSM_democratic_1:1 "Industrial Growth"
+ FSM_democratic_1_desc:1 "The newly enfranchised voters of FSM are now beginning to invest in industry. We must pave the way for them to not only vote, but to control and expand key industries." 
+ FSM_democratic_2:1 "Industrial Growth"
+ FSM_democratic_2_desc:1 "The newly enfranchised voters of FSM are now beginning to invest in industry. We must pave the way for them to not only vote, but to control and expand key industries." 
 
 
  FSM_nybornholm_question:0 "The Nybornholm Question"
