--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -119,8 +119,16 @@
  FSM_democratic_0_desc:1 "The Jaegerbergen divide the east from the west in FSM. We must ensure national unity by carving roads and railroads through the mountains to link our nation together." 
  FSM_democratic_1:1 "Industrial Growth"
  FSM_democratic_1_desc:1 "The newly enfranchised voters of FSM are now beginning to invest in industry. We must pave the way for them to not only vote, but to control and expand key industries." 
- FSM_democratic_2:1 "Industrial Growth"
- FSM_democratic_2_desc:1 "The newly enfranchised voters of FSM are now beginning to invest in industry. We must pave the way for them to not only vote, but to control and expand key industries." 
+ FSM_democratic_2:1 "Niemals Hitler!"
+ FSM_democratic_2_desc:1 "The rise of the Nazis in Germany, along with their radical ideas, have pushed many Germans into finally immigrating to FSM. Here, they feel that the government supports their ideals and beliefs."
+ 01_FSM_democratic2: "Immigrants swell the ranks of the military." 
+ FSM_democratic_3:1 "Rebirth of Military Industry"
+ FSM_democratic_3_desc:1 "We understand why our industry was destroyed during the Great War, but it still crippled our military for years. Now is the time to undo what was done and again build up our military; this time we fight on the side of Right."
+ FSM_democratic_4:1 "Immigrant Capital"
+ FSM_democratic_4_desc:1 "A few of the immigrants from Germany brought significant amounts of capital with them as they fled the Nazi regime. Most have begun investing in industries across the FSM."
+ FSM_democratic_5:1 "War is Hell"
+ FSM_democratic_5_desc:1 "The conflict in Europe, perpetrated by Nazi Germany, has brought another significant wave of immigration from the war-ravaged continent. We must welcome them with open arms, but remind them of their responsibilities to their new homeland."
+ 01_FSM_democratic5: "Another wave of immigrants join the ranks of the military." 
 
 
  FSM_nybornholm_question:0 "The Nybornholm Question"
