--- a/localisation/FSM_l_english.yml
+++ b/localisation/FSM_l_english.yml
@@ -129,6 +129,10 @@
  FSM_democratic_5:1 "War is Hell"
  FSM_democratic_5_desc:1 "The conflict in Europe, perpetrated by Nazi Germany, has brought another significant wave of immigration from the war-ravaged continent. We must welcome them with open arms, but remind them of their responsibilities to their new homeland."
  01_FSM_democratic5: "Another wave of immigrants join the ranks of the military." 
+ FSM_democratic_6:1 "End of the Sanctions"
+ FSM_democratic_6_desc:1 "After years of toil and diplomacy we have finally gained the chance to prove to the winners of the Great War that our contrition is true. If we publicly renounce all ideological ties to Germany, perhaps they will lift the sanctions imposed by the Treaty of Versailles."
+ FSM_pacific_doctrine:1 "Pacific Doctrine"
+ FSM_pacific_doctrine_desc:1 "After years of toil and diplomacy we have finally gained the chance to prove to the winners of the Great War that our contrition is true. If we publicly renounce all ideological ties to Germany, perhaps they will lift the sanctions imposed by the Treaty of Versailles."
 
 
  FSM_nybornholm_question:0 "The Nybornholm Question"
